# SmartClaim-Auditor

./: .gitignore  README.md  skills-lock.json
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: claims.py  clauses.py  documents.py
backend/app/audit/: __init__.py  graph.py  llm.py  nodes.py  state.py
backend/app/audit/prompts/: analyst.yaml  auditor.yaml
backend/app/core/: config.py
backend/app/data/: clauses.json
backend/app/data/index/: index.faiss  index.pkl
backend/app/db/: database.py
backend/app/ml/: classifier.py  labels.py
backend/app/models/: claim.py
backend/app/rag/: chunking.py  embeddings.py  indexer.py  retriever.py
backend/tests/: test_claims_api.py
backend/tests/integration/: test_audit_integration.py  test_classifier_integration.py  test_rag_integration.py
backend/tests/unit/: test_audit_graph.py  test_audit_llm.py  test_audit_nodes.py  test_audit_schema.py  test_audit_state.py  test_chunking.py  test_citation_check.py  test_classifier.py  test_embeddings.py  test_indexer.py  test_retriever.py
docs/: 00-overview.md  01-fase-api-gateway.md  02-fase-classifier.md  03-fase-rag-faiss.md  04-fase-langgraph.md  05-fase-frontend.md  api-reference.md  architecture.md  clausulas.md  glosario.md  smartclaim_core.md  user-guide.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AuditCorrection.tsx  ClaimForm.tsx  ConfidenceMeter.tsx  EvidencePanel.tsx  HistoryItem.tsx  HistorySidebar.tsx  ProcessingState.tsx  (+2 more)
(+11 files in other folders)
