[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.14.3",
    "fastapi[standard]>=0.136.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters",
    "langgraph>=1.2.5",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.13.2",
    "sentence-transformers>=5.5.1",
    "sqlmodel>=0.0.38",
    "torch>=2.12.0",
    "transformers>=5.12.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["slow: real-provider integration tests (deselect with -m 'not slow')"]
addopts = "-m 'not slow'"
